--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.10",
+    "morgan": "^1.10.0"
   }
 }
